        an add user to clipboard UI. This allows the adding of new
        users to a clipboard directly.

      - bug 100741: when groups are be used, the groups management screen
                    also shows groups defined elsewhere (not just local to the 
                    container) and provides links to edit those groups

    Features ported from 2.0 branch

      - additional behaviour to mangle.Id.new(), when passing True
        as the first argument one can suppress the ValueError raised
        on invalid ids (and always have a new id generated)

    Bugs Fixed:

      - fixed 156921: Escaping image title strings.

      - fixed 101240: SilvaExternalSource cannot be disabled.

      - fixed 100835: image upload screen should show allowed formats

      - fixed 101174: When an id is in use on the Zope level, inform 
                      users accordingly
      
      - Added True switch to Image.py tag method to escape double quotes.

    Bugfixes ported from 2.0 branch

      - fixed 158381: Group objects should be removable even if the 
        groups service isn't installed.

      - fixed 158384: can't add groups: title error issue

      - fixed 157010: anchors in links: # -> %23

      - fixed wuw140: Incorrect caching of images.

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.

      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.
