@@ -35,6 +35,9 @@
   name="return_url"
   tal:attributes="value return_url"
 />
+<input name="position:int" type="hidden" 
+       tal:condition="request/position|nothing"
+       tal:attributes="value request/position|nothing" />
 <table class="listing">
 <thead>
   <tr>
